--- a/src/App.css
+++ b/src/App.css
@@ -3,7 +3,7 @@ body {
 	font-family: 'Helvetica Neue', Helvetica, Arial, 'Lucida Grande', sans-serif;
 	color: #6b8e6e;
 	font-weight: bold;
-	background-color: white;
+	background-color: #f4eceb;
 }
 
 h1 {
