--- a/src/App.css
+++ b/src/App.css
@@ -22,7 +22,8 @@ rect {
 }
 
 /* Stijling van de pop up waarin de data te zien is (hover state) */
-#tooltip {
+#tooltip,
+#tooltip2 {
 	position: absolute;
 	width: 200px;
 	height: auto;
@@ -40,11 +41,13 @@ rect {
 	text-align: center;
 }
 
-#tooltip.hidden {
+#tooltip.hidden,
+#tooltip2.hidden2 {
 	display: none;
 }
 
-#tooltip p {
+#tooltip p,
+#tooltip2 p {
 	margin: 0;
 	font-family: sans-serif;
 	font-size: 16px;
